--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.1.0",
     "workbox-precaching": "^7.1.0",
