--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "dayjs": "^1.11.12",
     "firebase": "^10.12.4",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.1.0",
     "workbox-precaching": "^7.1.0",
